# dropcel

./: .oxlintrc.json  ARCHITECTURE.md  CONTEXT.md  EFFECT-V4-PLAN.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
oxlint-plugin-dropcel/: index.ts  tsconfig.json  utils.ts
oxlint-plugin-dropcel/rules/: no-inline-schema-compile.ts  no-manual-effect-runtime-in-tests.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  db.rs  error.rs  files.rs  folder_icons.rs  git.rs  lib.rs  logger.rs  main.rs  network.rs  projects.rs  screenshot.rs  startup.rs  tray.rs  tray_drop.rs  watcher.rs
src-tauri/src/folder_icons/: generator.rs
src/components/: DropField.tsx  DropZone.tsx  FrameworkIcon.tsx  LockBranchDialog.tsx  LogViewerDialog.tsx  ProjectContextMenu.tsx  SitePreview.tsx  StatusIndicator.tsx  TeamDialog.tsx  TriangleField.tsx  UserAvatar.tsx  useDeviceSignIn.ts
src/components/ui/: badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  input.tsx  switch.tsx  toast.tsx
src/core/: account-session.test.ts  account-session.ts  api-deployer.test.ts  api-deployer.ts  app-state.ts  atoms.ts  auth.test.ts  auth.ts  auto-deploy-gate.test.ts  auto-deploy-gate.ts  composition.ts  deployer.ts  deployment-actions.test.ts  deployment-actions.ts  detection.test.ts  detection.ts  effects.test.ts  effects.ts  errors.test.ts  errors.ts  git.test.ts  git.ts  held-changes.test.ts  held-changes.ts  ipc.test.ts  ipc.ts  orchestrator.ts  pipeline.ts  public-url.test.ts  public-url.ts  queue.test.ts  queue.ts  ready-effects.test.ts  ready-effects.ts  reconciler.test.ts  reconciler.ts  rename.test.ts  rename.ts  state-machine.test.ts  state-machine.ts  (+6 more)
src/lib/: ipc.ts  log.ts  theme.ts  utils.ts
src/pages/: Dashboard.tsx  Onboarding.tsx  Settings.tsx
src/store/: app.ts
